@@ -24,6 +24,7 @@ Changes:
 - Add ability to import software raid disks. (except vinum)
 - Add ability to import single disks. (detect ZFS/UFS/NTFS only)
 - Add ability to configure multiple iSCSI LUNs. (disk type only)
+- Add ability to edit power mode and CPU frequency.
 - Update mount points after importing disks. (GPT UFS/MBR UFS/GPT NTFS only)
 - Add ZFS sparse volume support.
 - Add GPT UUID to mount point.
